overflow fix

--- a/assets/css/my.css
+++ b/assets/css/my.css
@@ -7,6 +7,7 @@
     box-sizing: border-box;
     text-decoration: none !important;
     box-sizing: border-box;
+  
 }
 body{
     background-color:#060065;
@@ -98,6 +99,7 @@ header{
     font-size: 26px;
     cursor: pointer;
     display: none !important;
+    overflow-x: hidden;
 }
 
 /* header section */
